@@ -1,0 +1,10 @@
+#! /usr/bin/env python
+
+def privatize_list(mlist):
+        mlist.advertised=0
+        mlist.subscribe_policy=3
+        mlist.member_posting_only=1
+        mlist.private_roster=1
+        mlist.archive_private=1
+        mlist.Save()
+
